--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -1005,40 +1005,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Límite de datos atípicos: 92.0\n"
+      "Límite de datos atípicos: 65.0\n",
+      "822\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0      22.0\n",
-       "1      38.0\n",
-       "2      26.0\n",
-       "3      35.0\n",
-       "4      35.0\n",
-       "       ... \n",
-       "886    27.0\n",
-       "887    19.0\n",
-       "888    30.0\n",
-       "889    26.0\n",
-       "890    32.0\n",
-       "Name: Age, Length: 838, dtype: float64"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "remove_extreme_outliers(df.Age)"
+    "df[\"Age\"] = remove_outliers(df.Age)\n",
+    "print(df.Age.notna().sum())\n",
+    "df.dropna(inplace=True)"
    ]
   },
   {
